--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<input type="text" id="loginName" placeholder="Username" /><br />
 	<input type="password" id="loginPassword" placeholder="Password"/><br />
 	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Do It </button>
+	<button type="button" id="registerButton" class="buttons" onclick="location.href='https://monkeyoclock.com/Register.php';"> Register </button>
 	<span id="loginResult"></span>
 </div>
 
