--- a/register.html
+++ b/register.html
@@ -11,12 +11,15 @@
 <h1 id="title">COP 4331 LAMP Stack Demo</h1>
 
 <div id="loginDiv">
-	<span id="inner-title">PLEASE LOG IN</span>
-	<input type="text" id="loginName" placeholder="Username" /><br />
-	<input type="password" id="loginPassword" placeholder="Password"/><br />
-	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Do It </button>
+	<span id="inner-title">Register</span>
+	<input type="text" id="firstName" placeholder="First Name" /><br />
+	<input type="text" id="lastName" placeholder="Last Name" /><br />
+	<input type="text" id="login" placeholder="Username" /><br />
+	<input type="password" id="loginPassword" placeholder="Password" /><br />
+	<span id="registerResult"></span>
+	<button type="button" id="loginButton" class="buttons" onclick="doRegister();"> Do It </button>
 	<button type="button" id="registerButton" class="buttons" onclick="location.href='https://monkeyoclock.com/Register.html';"> Create an Account </button>
-	<span id="loginResult"></span>
+	
 </div>
 
 </body>
