--- a/register.html
+++ b/register.html
@@ -10,16 +10,14 @@
 
 <h1 id="title">COP 4331 LAMP Stack Demo</h1>
 
-<div id="loginDiv">
+<div id="registerDiv">
 	<span id="inner-title">Register</span>
 	<input type="text" id="firstName" placeholder="First Name" /><br />
 	<input type="text" id="lastName" placeholder="Last Name" /><br />
 	<input type="text" id="login" placeholder="Username" /><br />
-	<input type="password" id="loginPassword" placeholder="Password" /><br />
+	<input type="password" id="password" placeholder="Password" /><br />
 	<span id="registerResult"></span>
-	<button type="button" id="loginButton" class="buttons" onclick="doRegister();"> Do It </button>
-	<button type="button" id="registerButton" class="buttons" onclick="location.href='https://monkeyoclock.com/Register.html';"> Create an Account </button>
-	
+	<button type="button" id="loginButton" class="buttons" onclick="doRegister();"> Register </button>	
 </div>
 
 </body>
