--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<input type="text" id="loginName" placeholder="Username" /><br />
 	<input type="password" id="loginPassword" placeholder="Password"/><br />
 	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Do It </button>
-	<button type="button" id="registerButton" class="buttons" onclick="location.href='monkeyoclock.com/register.html';"> Create an Account </button>
+	<button type="button" id="registerButton" class="buttons" onclick="location.href='register.html';"> Create an Account </button>
 	<span id="loginResult"></span>
 </div>
 
