--- a/register.html
+++ b/register.html
@@ -17,7 +17,7 @@
 	<input type="text" id="login" placeholder="Username" /><br />
 	<input type="password" id="password" placeholder="Password" /><br />
 	<span id="registerResult"></span>
-	<button type="button" id="loginButton" class="buttons" onclick="doRegister();"> Register </button>	
+	<button type="button" id="registerButton" class="buttons" onclick="doRegister();"> Register </button>	
 </div>
 
 </body>
