--- a/color.html
+++ b/color.html
@@ -4,7 +4,8 @@
 	<script type="text/javascript" src="js/code.js"></script>
     <link href="css/styles.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 	<script type="text/javascript">
 	document.addEventListener('DOMContentLoaded', function() 
 	{
@@ -19,20 +20,20 @@
 
 <div id="loggedInDiv">
 	<span id="userName"></span><br />
-	<button type="button" id="logoutButton" class="buttons" onclick="doLogout();"> Log Out </button>
+	<button type="button" id="logoutButton" class="btn btn-danger" onclick="doLogout();"> Log Out </button>
 </div>
 
 <div id="accessUIDiv">
 	<br />
 
 	<input type="text" id="searchText" placeholder="Color To Search For"/>
-	<button type="button" id="searchColorButton" class="buttons" onclick="searchColor();"> Search Color </button><br />
+	<button type="button" id="searchColorButton" class="btn btn-primary" onclick="searchColor();"> Search Color </button><br />
 	<span id="colorSearchResult"></span>
 	<p id="colorList">
 	</p><br /><br />
 
 	<input type="text" id="colorText" placeholder="Color To Add">
-	<button type="button" id="addColorButton" class="buttons" onclick="addColor();"> Add Color </button><br />
+	<button type="button" id="addColorButton" class="btn btn-primary" onclick="addColor();"> Add Color </button><br />
 	<span id="colorAddResult"></span>
 </div>
 
