--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
 	<script type="text/javascript" src="js/code.js"></script>
     <link href="css/styles.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 
@@ -17,7 +18,7 @@
 	<input type="text" id="login" placeholder="Username" /><br />
 	<input type="password" id="password" placeholder="Password" /><br />
 	<span id="registerResult"></span>
-	<button type="button" id="registerButton" class="buttons" onclick="doRegister();"> Register </button>	
+	<button type="button" id="registerButton" class="btn" onclick="doRegister();"> Register </button>	
 </div>
 
 </body>
