--- a/index.html
+++ b/index.html
@@ -8,24 +8,21 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-
-	<h1 id="title">COP 4331 LAMP Stack Demo</h1>
-	<form>
-		<div class="form-group">
-			<label for="loginName">Username</label>
-			<input type="text" class="form-control" id="loginName" aria-describedby="emailHelp" placeholder="Username">
-		</div>
-		<div class="form-group">
-			<label for="exampleInputPassword1">Password</label>
-			<input type="password" class="form-control" id="loginPassword" placeholder="Password">
-		</div>
-		<div class="form-group form-check">
-			<input type="checkbox" class="form-check-input" id="exampleCheck1">
-			<label class="form-check-label" for="exampleCheck1">Check me out</label>
-		</div>
-		<button type="button" id="loginButton" class="btn btn-primary" onclick="doLogin();">Login</button>
-		<button type="button" id="registerButton" class="btn btn-outline-primary" onclick="location.href='register.html';"> Create an Account </button>
-	</form>
+	<div class="container">
+		<h1 id="title">COP 4331 LAMP Stack Demo</h1>
+		<form>
+			<div class="form-group">
+				<label for="loginName">Username</label>
+				<input type="text" class="form-control" id="loginName" aria-describedby="emailHelp" placeholder="Username">
+			</div>
+			<div class="form-group">
+				<label for="exampleInputPassword1">Password</label>
+				<input type="password" class="form-control" id="loginPassword" placeholder="Password">
+			</div>
+			<button type="button" id="loginButton" class="btn btn-primary" onclick="doLogin();">Login</button>
+			<button type="button" id="registerButton" class="btn btn-outline-primary" onclick="location.href='register.html';"> Create an Account </button>
+		</form>
+	</div>
 <!-- <div id="loginDiv">
 	
 	<span id="inner-title">PLEASE LOG IN</span>
