--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 		<form>
 			<div class="form-group">
 				<label for="loginName">Username</label>
-				<input type="text" class="form-control" id="loginName" aria-describedby="emailHelp" placeholder="Username">
+				<input type="text" class="form-control" id="loginName" placeholder="Username">
 			</div>
 			<div class="form-group">
-				<label for="exampleInputPassword1">Password</label>
+				<label for="loginPassword">Password</label>
 				<input type="password" class="form-control" id="loginPassword" placeholder="Password">
 			</div>
-			<button type="button" id="loginButton" class="btn btn-primary" onclick="doLogin();">Login</button>
-			<button type="button" id="registerButton" class="btn btn-outline-primary" onclick="location.href='register.html';"> Create an Account </button>
+			<button type="submit" id="loginButton" class="btn btn-primary" onclick="doLogin();">Login</button>
+			<button type="submit" id="registerButton" class="btn btn-outline-primary" onclick="location.href='register.html';"> Create an Account </button>
 		</form>
 	</div>
 <!-- <div id="loginDiv">
