--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<label for="loginPassword">Password</label>
 				<input type="password" class="form-control" id="loginPassword" placeholder="Password">
 			</div>
+			<span id="loginResult" class="p"></span> 
 			<button type="button" id="loginButton" class="btn btn-primary" onclick="doLogin();">Login</button>
 			<button type="button" id="registerButton" class="btn btn-outline-primary" onclick="location.href='register.html';"> Create an Account </button>
 		</form>
