--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1 id="title">COP 4331 LAMP Stack Demo</h1>
+		<h1 id="title">The UnFacebook</h1>
 		<form>
 			<div class="form-group">
 				<label for="loginName">Username</label>
