--- a/color.html
+++ b/color.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="container">
-	<h1 id="title">COP 4331 LAMP Stack Demo</h1>
+	<h1 id="title">The UnFacebook</h1>
 
 	<div id="loggedInDiv">
 		<span id="userName"></span><br />
