--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 	<div class="container">
-		<h1 id="title">The UnFacebook</h1>
-		<form>
+		<h1 id="title mx-auto">The UnFacebook</h1>
+		<form class="mx-auto">
 			<div class="form-group">
 				<label for="loginName">Username</label>
 				<input type="text" class="form-control" id="loginName" placeholder="Username">
