--- a/color.html
+++ b/color.html
@@ -16,11 +16,11 @@
 </head>
 <body>
 <div class="container">
-	<h1 id="title">The UnFacebook</h1>
+	<h1 class="text-center" id="title">The UnFacebook</h1>
 
-	<div id="loggedInDiv">
-		<span id="userName"></span><br />
-		<button type="button" id="logoutButton" class="btn btn-danger" onclick="doLogout();"> Log Out </button>
+	<div class="text-center" id="loggedInDiv">
+		<span class="text-center" id="userName"></span><br />
+		<button type="button" id="logoutButton" class="btn btn-danger mx-auto text-center" onclick="doLogout();"> Log Out </button>
 	</div>
 	
 	<div id="accessUIDiv">
