--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1 id="title mx-auto">The UnFacebook</h1>
+		<h1 class="text-center" id="title">The UnFacebook</h1>
 		<form class="mx-auto">
 			<div class="form-group">
 				<label for="loginName">Username</label>
