--- a/color.html
+++ b/color.html
@@ -23,7 +23,7 @@
 		<button type="button" id="logoutButton" class="btn btn-danger mx-auto text-center" onclick="doLogout();"> Log Out </button>
 	</div>
 	
-	<div id="accessUIDiv">
+	<div class="text-center" id="accessUIDiv">
 		<br />
 	
 		<input type="text" id="searchText" placeholder="Color To Search For"/>
