--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<h1 class="text-center" id="title">The UnFacebook</h1>
-		<form class="mx-auto">
+		<form class="login-form text-center">
 			<div class="form-group">
 				<label for="loginName">Username</label>
 				<input type="text" class="form-control" id="loginName" placeholder="Username">
