--- a/color.html
+++ b/color.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="container">
-	<h1 class="text-center" id="title">The UnFacebook</h1>
+	<h1 class="text-center" id="title">The NoFacebook</h1>
 
 	<div class="text-center" id="loggedInDiv">
 		<span class="text-center" id="userName"></span><br />
