--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>COP 4331 LAMP Stack Demo</title>
+	<title>The NoFacebook</title>
 	<script type="text/javascript" src="js/md5.js"></script>
 	<script type="text/javascript" src="js/code.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<div class="container">
-		<h1 class="text-center" id="title">The UnFacebook</h1>
-		<form class="login-form text-center">
+		<h1 class="text-center mt-5" id="title">The NoFacebook</h1>
+		<form class="login-form text-center mx-auto mt-5">
 			<div class="form-group">
 				<label for="loginName">Username</label>
 				<input type="text" class="form-control" id="loginName" placeholder="Username">
