--- a/register.html
+++ b/register.html
@@ -1,25 +1,31 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>The NoFacebook</title>
-	<script type="text/javascript" src="js/md5.js"></script>
-	<script type="text/javascript" src="js/code.js"></script>
-    <link href="css/styles.css" rel="stylesheet">	
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign up for Banana Peel</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,300&family=Viga&display=swap" rel="stylesheet">
 </head>
-<body>
-
-<h1 id="title">The NoFacebook</h1>
-
-<div id="registerDiv">
-	<span id="inner-title">Register</span>
-	<input type="text" id="firstName" placeholder="First Name" /><br />
-	<input type="text" id="lastName" placeholder="Last Name" /><br />
-	<input type="text" id="login" placeholder="Username" /><br />
-	<input type="password" id="password" placeholder="Password" /><br />
-	<span id="registerResult"></span>
-	<button type="button" id="registerButton" class="btn" onclick="doRegister();"> Register </button>	
-</div>
-
-</body>
+    <body>
+        <div class="container">
+            <div class="form-container">
+                <form class="info-form" action="API/Register.php" method="POST">
+                    <h1 class="page-title" >Sign Up!</h1>
+                    <h3 class="input-label">First Name</h3>
+                    <input class="input" type="firstname">
+                    <h3 class="input-label">Last Name</h3>
+                    <input class="input" type="lastname">
+                    <h3 class="input-label">Username</h3>
+                    <input class="input" type="username">
+                    <h3 class="input-label">Password</h3>
+                    <input class="input" type="password">
+                    <button class="submit" type="submit">Register</button>
+                </form>
+            </div>
+        </div>
+    </body>
 </html>
