link with javascript by id

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <img class="logo" src="images/logo.svg" alt="Banana Peel Logo"/>
             <form class="info-form" action="API/Login.php" method="POST">
                     <h3 class="input-label">Username</h3>
-                    <input class="input" type="text" placeholder="" ></input>
+                    <input class="input" id="loginName" type="text" placeholder="" ></input>
                     <h3 class="input-label">Password</h3>
-                    <input class="input" type="password"></input>
+                    <input class="input" id="loginPassword" type="password"></input>
                     <div class="button-container">
                     <button class="submit" type="submit" onclick="doLogin()">Login</button>
                     <a class="create" href="register.html">Or Create a New Account</a>
