--- a/register.html
+++ b/register.html
@@ -16,13 +16,13 @@
                 <form class="info-form" action="API/Register.php" method="POST">
                     <h1 class="page-title" >Sign Up!</h1>
                     <h3 class="input-label">First Name</h3>
-                    <input class="input" type="firstname">
+                    <input class="input" id="firstName" type="firstname">
                     <h3 class="input-label">Last Name</h3>
-                    <input class="input" type="lastname">
+                    <input class="input" id="lastName" type="lastname">
                     <h3 class="input-label">Username</h3>
-                    <input class="input" type="username">
+                    <input class="input" id="login" type="username">
                     <h3 class="input-label">Password</h3>
-                    <input class="input" type="password">
+                    <input class="input" id="password" type="password">
                     <button class="submit" type="submit">Register</button>
                 </form>
             </div>
