--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,300&family=Viga&display=swap" rel="stylesheet">
     </head>
     <body>
-    <div class="container">
-        <div class="form-container" >
-            <img class="logo" src="images/logo.svg" alt="Banana Peel Logo"/>
-            <form class="info-form" action="API/Login.php" method="POST">
+        <div class="container">
+            <div class="form-container" >
+                <img class="logo" src="images/logo.svg" alt="Banana Peel Logo"/>
+                <form>
                     <h3 class="input-label">Username</h3>
                     <input class="input" id="loginName" type="text" placeholder="" ></input>
                     <h3 class="input-label">Password</h3>
