--- a/register.html
+++ b/register.html
@@ -13,14 +13,14 @@
     <body>
         <div class="container">
             <div class="form-container">
-                <form class="info-form" action="API/Register.php" method="POST">
+                <form>
                     <h1 class="page-title" >Sign Up!</h1>
                     <h3 class="input-label">First Name</h3>
-                    <input class="input" id="firstName" type="firstname">
+                    <input class="input" id="firstName" type="text">
                     <h3 class="input-label">Last Name</h3>
-                    <input class="input" id="lastName" type="lastname">
+                    <input class="input" id="lastName" type="text">
                     <h3 class="input-label">Username</h3>
-                    <input class="input" id="login" type="username">
+                    <input class="input" id="login" type="text">
                     <h3 class="input-label">Password</h3>
                     <input class="input" id="password" type="password">
                     <button class="submit" type="submit">Register</button>
