--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Banana Peel</title>
-        <script type="text/javascript" src="js/md5.js"></script>
-        <script type="text/javascript" src="js/code.js"></script>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,17 +14,20 @@
         <div class="container">
             <div class="form-container" >
                 <img class="logo" src="images/logo.svg" alt="Banana Peel Logo"/>
-                <form>
+                <p id="loginResult" class="message hide">-</p>
+                <form class="info-form">
                     <h3 class="input-label">Username</h3>
-                    <input class="input" id="loginName" type="text" placeholder="" ></input>
+                    <input id="loginName" class="input" type="text" placeholder="" ></input>
                     <h3 class="input-label">Password</h3>
-                    <input class="input" id="loginPassword" type="password"></input>
+                    <input id="loginPassword" class="input" type="password"></input>
                     <div class="button-container">
-                    <button class="submit" type="submit" onclick="doLogin()">Login</button>
-                    <a class="create" href="register.html">Or Create a New Account</a>
+                        <button class="submit" type="button" onclick="doLogin()">Login</button>
+                        <a class="create" href="register.html">Or Create a New Account</a>
                     </div>
                 </form>
             </div>
         </div>
+        <script src="./js/md5.js"></script>
+        <script src="./js/code.js"></script>
     </body>
 </html>
