--- a/register.html
+++ b/register.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up for Banana Peel</title>
-    <script type="text/javascript" src="js/md5.js"></script>
-	<script type="text/javascript" src="js/code.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,20 +12,25 @@
 </head>
     <body>
         <div class="container">
+            <h1 class="page-title" >Sign Up!</h1>
+            <p id="registerResult" class="message hide">-</p>
             <div class="form-container">
-                <form>
-                    <h1 class="page-title" >Sign Up!</h1>
+                <form class="info-form" action="API/Register.php" method="POST">
                     <h3 class="input-label">First Name</h3>
-                    <input class="input" id="firstName" type="text">
+                    <input id="firstName"  class="input" type="firstname">
                     <h3 class="input-label">Last Name</h3>
-                    <input class="input" id="lastName" type="text">
+                    <input id="lastName" class="input" type="lastname">
                     <h3 class="input-label">Username</h3>
-                    <input class="input" id="login" type="text">
+                    <input id="login" class="input" type="username">
                     <h3 class="input-label">Password</h3>
-                    <input class="input" id="password" type="password">
-                    <button class="submit" type="submit">Register</button>
+                    <input id="password" class="input" type="password">
+                    <div class="button-container" >
+                        <button class="submit" type="button" onclick="doRegister()">Register</button>
+                    </div>
                 </form>
             </div>
         </div>
+        <script src="/js/md5.js"></script>
+        <script src="/js/code.js"></script>
     </body>
 </html>
