edited contact for functionality

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,9 @@
             <img class="login-logo" src="images/loginLogo.svg" alt="Banana Peel">
         </div>
         <div class="nav">
-            <input class="nav search" type="text"></input>
+            <input class="nav search" id="searchFirstName" type="text"></input>
+            <input class="nav search" id="searchLastName" type="text"></input>
+            <button onClick="searchContact()">Search</button>
             <button><span class="material-icons md-light">person_add</span></button>
         </div>
         <div>
