--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,25 @@
             <button><span class="material-icons md-light">logout</span></button>
         </div>
     </div>
+
+    <p id="contactSearchResult"></p>
+
+    <div>
+        <table>
+            <thead>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Phone Number</th>
+                    <th>Email</th>
+                </tr>
+            </thead>
+            <tbody id="contactsTableBody">
+                
+            </tbody>
+        </table>
+    </div>
+    
     <script src="./js/mock.js"></script>
     <script src="./js/md5.js"></script>
     <script src="./js/code.js"></script>
