--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                     <th>Email</th>
                 </tr>
             </thead>
-            <tbody id="contactsTableBody">
+            <tbody id="contactsTableBody" onload="searchContact()">
                 
             </tbody>
         </table>
