--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script type="text/javascript">
+        window.onload = searchcontact;
+        </script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,300&family=Viga&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -39,7 +42,7 @@
                     <th>Email</th>
                 </tr>
             </thead>
-            <tbody id="contactsTableBody" onload="searchContact()">
+            <tbody id="contactsTableBody">
                 
             </tbody>
         </table>
