--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
     <script src="./js/md5.js"></script>
     <script src="./js/code.js"></script>
     <script type="text/javascript">
-        window.onload = searchcontact;
+        window.onload = searchContact;
     </script>
 </body>
 </html>
