--- a/contact.html
+++ b/contact.html
@@ -48,5 +48,9 @@
     <script src="./js/mock.js"></script>
     <script src="./js/md5.js"></script>
     <script src="./js/code.js"></script>
+    <script type="text/javascript">
+        window.onload = searchContact;
+        alreadySearched = false;
+    </script>
 </body>
 </html>
