--- a/contact.html
+++ b/contact.html
@@ -8,44 +8,30 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,300&family=Viga&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600;1,700&family=Viga&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <div class="nav" >
-        <div>
+    <p id="contactSearchResult" class="message hide"></p>
+    <div class="nav">
+        <!-- <div>
             <img class="login-logo" src="images/loginLogo.svg" alt="Banana Peel">
-        </div>
-        <div class="nav">
-            <input class="nav search" id="searchFirstName" type="text"></input>
-            <input class="nav search" id="searchLastName" type="text"></input>
-            <button onClick="searchContact()">Search</button>
-            <button><span class="material-icons md-light">person_add</span></button>
+        </div> -->
+        <div class="bar" >
+            <input class="nav search-first" id="searchFirstName" type="text" placeholder="First Name"></input>
+            <input class="nav search-last" id="searchLastName" type="text" placeholder="Last Name"></input>
+            <button><span class="material-icons md-dark search-icon" onClick="searchContact()">search</span></button>
+            <button><span class="material-icons md-dark add-icon">person_add</span></button>
         </div>
         <div>
-            <button><span class="material-icons md-light">logout</span></button>
+            <button><span class="material-icons md-light logout-icon">logout</span></button>
         </div>
     </div>
-
-    <p id="contactSearchResult"></p>
-
-    <div>
-        <table>
-            <thead>
-                <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Phone Number</th>
-                    <th>Email</th>
-                </tr>
-            </thead>
-            <tbody id="contactsTableBody">
-                
-            </tbody>
-        </table>
+    <div class="contact-container" >
+        <div id="searchResults" class="contact-list" >  
+        </div>
     </div>
-
-    <script src="./js/mock.js"></script>
+    
     <script src="./js/md5.js"></script>
     <script src="./js/code.js"></script>
 </body>
