--- a/register.html
+++ b/register.html
@@ -9,11 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,300&family=Viga&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 </head>
     <body>
         <div class="container">
-            <h1 class="page-title" >Sign Up!</h1>
-            <p id="registerResult" class="message hide">-</p>
+            <h1 class="page-title animate__animated animate__tada" >Sign Up!</h1>
+            <p id="registerResult" class="animate__animated animate__shakeX message hide">-</p>
             <div class="form-container">
                 <form class="info-form" action="API/Register.php" method="POST">
                     <h3 class="input-label">First Name</h3>
